--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,23 @@
-#---- Base python ----
-FROM python:3.9-slim-bullseye as base
+# ---- Base python ----
+FROM python:3.9-slim-bullseye AS base
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
 # Create app directory
 WORKDIR /src
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt 
+
+# ---- Dependencies ----
+FROM base AS dependencies
+
+# Create Python virtualenv and use it
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+COPY ./requirements.txt ./
+
+RUN pip install -r requirements.txt --no-cache-dir
+
 
 # ---- Copy Files/Build ----
 FROM base
@@ -16,4 +26,5 @@ WORKDIR /src
 
 COPY . /src
 
-RUN chmod -R 777 /src
+COPY --from=dependencies /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
