--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,8 +8,7 @@ djangorestframework-simplejwt==5.0.0
 django-jazzmin==2.4.8
 gunicorn==20.1.0
 whitenoise==5.3.0
-celery==5.1.2
+celery[redis]==5.1.2
 django-celery-beat==2.2.1
 requests==2.7.0
-django-redis==5.2.0
 django-silk==4.3.0
