--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,8 +31,8 @@ services:
     env_file:
       - .env.dev
   
-  redis-celery:
-    container_name: redis-celery
+  redis:
+    container_name: redis
     image: redis:alpine
   
   celery:
@@ -48,14 +48,6 @@ services:
       - db
       - redis
       - server
-
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:3-management-alpine
-    ports: 
-      - "5672:5672"
-      - "15672:15672"
-
 
 volumes:
   run_vol:
