Added github workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
           image-name: mcq-server # Provide only Docker image name, tag will be automatically set to latest
-          dockerfile: server/Dockerfile
+          build-context: ./server
