--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -17,4 +17,5 @@ djoser==2.0.5
 martor==1.6.13
 sentry-sdk==1.5.10
 pandas==1.4.2
- django-admin-csvexport==1.11 
+django-admin-csvexport==1.11 
+django-import-export==2.5.0
